@@ -22,6 +22,7 @@ extern int MONITOR_ret_nesting;
 
 extern const UBYTE MONITOR_optype6502[256];
 
+void MONITOR_Exit(void);
 void MONITOR_ShowState(FILE *fp, UWORD pc, UBYTE a, UBYTE x, UBYTE y, UBYTE s,
                 char n, char v, char z, char c);
 
